--- a/src/storage/app/public/.gitignore
+++ b/src/storage/app/public/.gitignore
@@ -1,3 +1,3 @@
 !.gitignore
 !/storage/app/public/item_images/*
-!/storage/app/public/profile_images/*
+!/storage/app/public/profile_images/.gitkeep
