--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@ services:
     container_name: flea_market_php
     volumes:
       - ./src:/var/www/
+      - ./src/.env:/var/www/.env
+      - ./src/.env.testing:/var/www/.env.testing
     networks:
       - flea_market_network
     restart: always
