--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -11,6 +11,11 @@ services:
   mysql:
     env_file:
       - src/.env
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: flea_market_db
+      MYSQL_USER: user
+      MYSQL_PASSWORD: pass
 
   phpmyadmin:
     depends_on:
