--- a/docker-compose.testing.yml
+++ b/docker-compose.testing.yml
@@ -1,26 +1,72 @@
 services:
-  php:
-    working_dir: /var/www
-    env_file:
-      - src/.env.testing
-  mysql:
+  nginx:
+    image: nginx:latest
+    container_name: flea_market_nginx_test
+    ports:
+      - "8082:80"
     volumes:
-      - type: tmpfs
-        target: /var/lib/mysql
+      - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./src:/var/www/
+    depends_on:
+      - php
+    networks:
+      - flea_market_network
+    restart: always
+
+  php:
+    build: ./docker/php
+    container_name: flea_market_php_test
+    working_dir: /var/www
+    volumes:
+      - ./src:/var/www/
     env_file:
       - src/.env.testing
+    depends_on:
+      - flea_market_mysql_test
+    networks:
+      - flea_market_network
+
+  mysql:
+    image: mysql:8.0.26
+    container_name: flea_market_mysql_test
+    command: mysqld --default-authentication-plugin=mysql_native_password
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: test_db
       MYSQL_USER: test_user
       MYSQL_PASSWORD: test
+    volumes:
+      - type: tmpfs
+        target: /var/lib/mysql
+    ports:
+      - "3307:3306"
+    networks:
+      - flea_market_network
 
   phpmyadmin:
-    env_file:
-      - src/.env.testing
+    image: phpmyadmin/phpmyadmin:latest
+    container_name: flea_market_phpmyadmin_test
+    depends_on:
+      - flea_market_mysql_test
+    ports:
+      - "8081:80"
     environment:
       - PMA_ARBITRARY=1
-      - PMA_HOST=mysql
+      - PMA_HOST=flea_market_mysql_test
       - PMA_USER=test_user
       - PMA_PASSWORD=test
+    networks:
+      - flea_market_network
 
+  mailhog:
+    image: mailhog/mailhog
+    container_name: flea_market_mailhog_test
+    ports:
+      - "1025:1025"
+      - "8025:8025"
+    networks:
+      - flea_market_network
+
+networks:
+  flea_market_network:
+    driver: bridge
