--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,12 +16,16 @@ services:
   php:
     build: ./docker/php
     container_name: flea_market_php
+    working_dir: /var/www
     volumes:
       - ./src:/var/www/
+    env_file:
+      - src/.env
+    depends_on:
+      - mysql
     networks:
       - flea_market_network
     restart: always
-    working_dir: /var/www
 
   mysql:
     image: mysql:8.0.26
@@ -29,9 +33,11 @@ services:
     command: mysqld --default-authentication-plugin=mysql_native_password
     environment:
       MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: flea_market_db
+      MYSQL_USER: user
+      MYSQL_PASSWORD: pass
     volumes:
-      - ./docker/mysql/data:/var/lib/mysql
-      - ./docker/mysql/my.cnf:/etc/mysql/conf.d/my.cnf
+      - mysql_data:/var/lib/mysql
     ports:
       - "3306:3306"
     networks:
@@ -44,7 +50,12 @@ services:
     depends_on:
       - mysql
     ports:
-      - 8080:80
+      - "8080:80"
+    environment:
+      - PMA_ARBITRARY=1
+      - PMA_HOST=mysql
+      - PMA_USER=user
+      - PMA_PASSWORD=pass
     networks:
       - flea_market_network
     restart: always
@@ -55,9 +66,9 @@ services:
     ports:
       - "1025:1025"
       - "8025:8025"
-    restart: always
     networks:
       - flea_market_network
+    restart: always
 
 networks:
   flea_market_network:
